better integration with main site

--- a/helpdesk/templates/helpdesk/base.html
+++ b/helpdesk/templates/helpdesk/base.html
@@ -15,7 +15,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% block helpdesk_title %}Helpdesk{% endblock %} :: {% trans "Powered by django-helpdesk" %}</title>
+    <title>{% block helpdesk_title %}Helpdesk{% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
     {% if helpdesk_settings.HELPDESK_USE_CDN %}
@@ -110,30 +110,34 @@
 
 </head>
 
-<body id="helpdesk-body">
-
-    <div id='container' class="container">
-        <div id='header' class="row">
-            <h1>{% block h1_title %}{% trans "Helpdesk" %}{% endblock %}</h1>
-            {% include "helpdesk/navigation.html" %}
+<body >
+    {% include "main/header.html" with activenav='helpdesk' %}
+    
+    <div id="helpdesk-body" style="padding-top: 10px;">
+        <div id='container' class="container">
+    
+            <div id='header' class="row">
+{#                <h1>{% block h1_title %}{% trans "Helpdesk" %}{% endblock %}</h1>#}
+                {% include "helpdesk/navigation.html" %}
+            </div>
+    
+            <div id='body' class="row">
+                {% block helpdesk_body %}{% endblock %}
+            </div>
+    
+            <div id='footer' class="row">
+                <div class="col-md-2">{% include "helpdesk/attribution.html" %}</div>
+            </div>
         </div>
-
-        <div id='body' class="row">
-            {% block helpdesk_body %}{% endblock %}
-        </div>
-
-        <div id='footer' class="row">
-            <div class="col-md-2">{% include "helpdesk/attribution.html" %}</div>
-        </div>
+        {% include "helpdesk/debug.html" %}
+    
+        <!-- Metis Menu Plugin JavaScript -->
+        <script src="{% static 'helpdesk/vendor/metisMenu/metisMenu.min.js' %}"></script>
+    
+        <!-- Custom Theme JavaScript -->
+        <script src="{% static 'helpdesk/dist/js/sb-admin-2.js' %}"></script>
+    
     </div>
-    {% include "helpdesk/debug.html" %}
-
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="{% static 'helpdesk/vendor/metisMenu/metisMenu.min.js' %}"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="{% static 'helpdesk/dist/js/sb-admin-2.js' %}"></script>
-
 </body>
 </html>
 {% endwith %}
